# popcast

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
scripts/: diff_tsv.py
src/nextcast/: __init__.py  cli.py  cross_immunity.py  fit.py
src/popcast/: __init__.py  cli.py  fit.py  forecast.py  utils.py  weighted_distances.py
tests/functional/: fit.t  forecast.t
tests/functional/data/simulated_sample_1/: filtered_metadata.tsv  forecasts.tsv  normalized_fitness.json  test_normalized_fitness.json
tests/functional/data/simulated_sample_1/2040-10-01/: frequencies.json  tree.nwk
