[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "popcast"
version = "2.0.0"
authors = [
  { name="John Huddleston", email="huddlej@gmail.com" },
]
description = "Long-term forecasts for pathogen populations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "jellyfish >=0.8.2, ==0.*",
    "numpy >=1.17.0, ==1.*",
    "pandas >=1.2.0, ==1.*",
    "scipy >=1.5.4, ==1.*",
]

[project.optional-dependencies]
full = [
    "opencv-python >=4.5, ==4.*",
]
test = [
    "coverage[toml] >=5.2.1, ==5.*",
    "cram >=0.7, ==0.*",
    "flake8 >=3.9.0, ==3.*",
    "pylint >=2.14.5, ==2.*",
]

[project.urls]
"Homepage" = "https://github.com/blab/popcast"
"Bug Tracker" = "https://github.com/blab/popcast/issues"

[project.scripts]
popcast = "popcast.cli:main"

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"
